2005-01-22  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (add_class_members): Handle 1.3 target.  Mark
	method as 'used'.
	* compiler.cc (compiler): Initialize new field.
	(set_target_1_5): Updated.
	(set_target_1_4): Updated.
	(set_target_1_3): Updated.
	* compiler.hh (compiler::target_14): New field.
	* main.cc (argument_parser::source_argument): New field.
	(argument_parser::set_source): Set it.
	(argument_parser::target_argument): New field.
	(argument_parser::set_target): Set it.
	(argument_parser::parse_args): 

2005-01-22  Tom Tromey  <tromey@redhat.com>

	* model/annotype.cc (resolve_hook): Don't special case class
	files.
	* bytecode/classreader.cc (parse): Specially handle interfaces of
	annotation types.
	* model/fwdtype.hh (model_forwarding_full::get_name): New method.

2005-01-21  Tom Tromey  <tromey@redhat.com>

	* bytecode/classwriter.cc (write): Don't set ACC_SUPER for enum
	classes.
	* model/annotype.cc (element_compatible_p): Resolve members
	before using annotation.
	* bytecode/attribute.cc (emit_annotation_value): Write enum
	constants.
	* model/memberref.cc (resolve): New method.
	(visit): New method.
	* bytecode/classreader.cc (parse_parameter_annotations): Set
	annotations on each parameter.
	(parse_annotation_value): Create a model_memberref_enum.
	(parse_self): Correctly handle ACC_SUPER when ACC_ENUM is set.
	* model/memberref.hh (class model_memberref_base): New class.
	(class model_memberref_forward): Derive from
	model_memberref_base.
	* model/variable.cc (resolve_classes): Use
	resolve_annotation_classes.
	(resolve): Call resolve_annotations.
	* model/method.cc (resolve_classes): Use
	resolve_annotation_classes.
	(resolve): Call resolve_annotations.
	* model/class.cc (do_resolve_classes): Use
	resolve_annotation_classes.
	(resolve_members): Call resolve_annotations.
	* model/iannotatable.cc (resolve_annotation_classes): New method.
	* model/iannotatable.hh (IAnnotatable::resolve_annotation_classes):
	Declare.	